@@ -1,3 +1,12 @@
+2002-11-16  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* lib/uuid.c (CATID_InternetAware,CLSID_HttpSProtocol,
+	CLSID_PSUrlMonProxy,CLSID_StdURLMoniker,IID_IObjectWithSite,
+	IID_IPersistMoniker,IID_IProgressNotify): Correct off-by-one bug
+	in definitions.
+	(CLSID_CFontPropPage00, GUID_FONTUNDERSCORE11,
+	IID_IOleControlSite89): Remove.
+
 2002-11-15  Christopher Faylor  <cgf@redhat.com>
 
 	* lib/uuid.c (IID_IRunnableObject): Remove duplicate definition.
